config: Enable Disqus
Signed-off-by: Vipul Jha <vipuljha08@gmail.com>

--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ paginate = "5"
 # post excerpt
 summaryLength = "10"
 # disqus short name
-disqusShortname = "" # get your shortname form here : https://disqus.com
+disqusShortname = "vipuljha-com" # get your shortname form here : https://disqus.com
 
 [outputs]
 home = ["HTML", "AMP", "RSS", "JSON"]
