trying to fix the website lmao
Signed-off-by: Vipul Jha <vipuljha08@gmail.com>

--- a/config.toml
+++ b/config.toml
@@ -1,1 +1,9 @@
+baseURL = "https://blog.vipuljha.com"
+languageCode = "en-us"
+# publishDir = "docs"
+# site title 
+title = "Vipul Jha"
+# theme
+theme = "hugo-theme-stack"
+
 disqusShortname = "vipuljha-com"
