I guess this should fix the fuckup
Signed-off-by: Vipul Jha <vipuljha08@gmail.com>

--- a/config.yaml
+++ b/config.yaml
@@ -5,7 +5,7 @@ paginate: 5
 title: Vipul Jha
 
 # Change it to your Disqus shortname before using
-disqusShortname: hugo-theme-stack
+disqusShortname: vipuljha-com
 
 # GA Tracking ID
 googleAnalytics: UA-67305507-4
